[gd_scene load_steps=9 format=3 uid="uid://cqg06r7scg0m7"]

[ext_resource type="PackedScene" uid="uid://b1qad4letyq4p" path="res://scenes/players/Player.tscn" id="1"]
[ext_resource type="Script" path="res://Spaceshooter.gd" id="2"]
[ext_resource type="PackedScene" path="res://Hud.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://dv8y1ya0wq2t6" path="res://assets/backgrounds/black.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bt4g8eef3co4k" path="res://assets/backgrounds/stars1.png" id="5"]
[ext_resource type="Texture2D" uid="uid://eewb5g6krh3r" path="res://assets/backgrounds/stars2.png" id="6"]
[ext_resource type="Texture2D" uid="uid://bc41ley84dxqv" path="res://assets/backgrounds/stars3.png" id="7"]
[ext_resource type="Script" path="res://ParallaxBackground.gd" id="8"]

[node name="Spaceshooter" type="Node2D"]
script = ExtResource("2")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("8")

[node name="Background" type="TextureRect" parent="ParallaxBackground"]
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("4")
expand_mode = 1
stretch_mode = 1

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(1, 1.5)
motion_mirroring = Vector2(0, 720)

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("5")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(0, 720)

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer2"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("6")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(1, 0.5)
motion_mirroring = Vector2(0, 720)

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer3"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("7")

[node name="Player" parent="." node_paths=PackedStringArray("bullet_container") instance=ExtResource("1")]
position = Vector2(668, 653)
bullet_container = NodePath("../Bullets")

[node name="EnemyTimer" type="Timer" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="Bullets" type="Node2D" parent="."]

[node name="Explossions" type="Node2D" parent="."]

[node name="HUD" parent="." instance=ExtResource("3")]

[connection signal="difficulty_changed" from="." to="HUD" method="_on_difficulty_changed"]
[connection signal="player_killed" from="." to="HUD" method="_on_player_killed"]
[connection signal="score_changed" from="." to="HUD" method="_on_score_changed"]
[connection signal="killed" from="Player" to="." method="_on_Player_killed"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
